update table historique

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -48,5 +48,9 @@
   "customerCare": {
     "dataSource": "vasopportunitesAppDb",
     "public": true
+  },
+  "historiqueSelfCare": {
+    "dataSource": "vasopportunitesAppDb",
+    "public": true
   }
 }
