--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "loopback-connector-mysql": "^7.0.13",
     "loopback-connector-postgresql": "^7.1.4",
     "serve-favicon": "^2.0.1",
+    "socket.io": "^4.7.5",
     "strong-error-handler": "^4.0.0"
   },
   "devDependencies": {
